Added Go Client-Server, gRPC requests to the java game engine